# hotel-data-lakehouse-platform

./: .gitignore  README.md
cloud/: Dockerfile  README.md  airflow-docker-compose.yaml  architecture.excalidraw  pyproject.toml  requirements.txt  test.ipynb
cloud/ansible/: create_compute_instance.yaml  deploy.yaml  inventory
cloud/ansible/secrets/: gcp-key.json
cloud/pipeline-orchestration-with-airflow/run_env/dags/: hotel_datalake_pipeline.py
cloud/rec-sys-training/: Dockerfile  recommender.py  requirements-docker.txt  requirements.txt
cloud/rec-sys-training/models/: vectorizer.pkl
cloud/rec-sys-training/static/: style.css
cloud/rec-sys-training/templates/: index.html
cloud/spark-script/: transform_lake_to_warehouse.py
cloud/terraform/: main.tf  variables.tf
cloud/utils/: config.yaml  export_data_to_datalake.py
on-premise/: README.md  Untitled-2026-02-27-1140.excalidraw  architecture.excalidraw  docker-compose.yml  pyproject.toml  requirements.txt
on-premise/rec-sys-training/: crawl_detail.py  crawl_ratings.py  crawl_url_hotel.py  create_train_test_data.py  main.py  merge_batch.py  recommender.py  requirements-docker.txt  requirements.txt  train_cb.py  train_model.ipynb  train_model.py
on-premise/rec-sys-training/data/: result_cb_25.csv  url_hotels.csv
on-premise/rec-sys-training/data/hotel_details/: hotel_details_batch_0.csv  hotel_details_batch_1.csv  hotel_details_batch_2.csv  hotel_details_batch_3.csv  hotel_details_batch_4.csv  hotel_details_batch_5.csv  hotel_details_batch_6.csv  hotel_details_batch_7.csv  hotel_details_batch_8.csv
on-premise/rec-sys-training/data/hotel_ratings/: hotel_ratings_batch_0.csv  hotel_ratings_batch_1.csv  hotel_ratings_batch_10.csv  hotel_ratings_batch_11.csv  hotel_ratings_batch_12.csv  hotel_ratings_batch_13.csv  hotel_ratings_batch_14.csv  hotel_ratings_batch_15.csv  hotel_ratings_batch_16.csv  hotel_ratings_batch_17.csv  hotel_ratings_batch_18.csv  hotel_ratings_batch_19.csv  hotel_ratings_batch_2.csv  hotel_ratings_batch_20.csv  hotel_ratings_batch_21.csv  hotel_ratings_batch_22.csv  hotel_ratings_batch_23.csv  hotel_ratings_batch_24.csv  hotel_ratings_batch_25.csv  hotel_ratings_batch_26.csv  hotel_ratings_batch_27.csv  hotel_ratings_batch_28.csv  hotel_ratings_batch_29.csv  hotel_ratings_batch_3.csv  hotel_ratings_batch_30.csv  hotel_ratings_batch_31.csv  hotel_ratings_batch_32.csv  hotel_ratings_batch_33.csv  hotel_ratings_batch_34.csv  hotel_ratings_batch_35.csv  hotel_ratings_batch_36.csv  hotel_ratings_batch_37.csv  hotel_ratings_batch_38.csv  hotel_ratings_batch_39.csv  hotel_ratings_batch_4.csv  hotel_ratings_batch_40.csv  hotel_ratings_batch_41.csv  hotel_ratings_batch_42.csv  hotel_ratings_batch_43.csv  hotel_ratings_batch_44.csv  (+43 more)
on-premise/spark/scripts/: transform_lake_to_warehouse.py
on-premise/trino/etc/: node.properties
on-premise/utils/: config.yaml  export_data_to_datalake.py
